# dynasaur

./: .gitattributes  CITATION.cff  README.md  create_model.py  data_generation.py  environment.yml  fourier_basis_functions.py  make_animations.py  model_functions.py  newtonian_orbits.py  plotting.py  pyproject.toml  test_chirp.py  test_model.py  test_orbits.py  train_model.py  window_functions.py
basis_funcitions/: basis.py  fourier_basis_functions.py
data_generation/: compute_waveform.py  data_generation.py  data_processing.py  kepler_orbits.py  newtonian_orbits.py  orbits_functions.py  random_orbits.py
examples/: circular_orbit_fixed_period.ini
scripts/: newtonian.ipynb  test_datagen.ipynb
src/dynasaur/: create_model.py  old_data_generation.py  run_chirp.py  run_model.py  run_model_timestep.py  run_waveform.py  test_model.py  test_model_timestep.py  test_orbits.py  test_waveform.py  train.py  train_model.py  train_model_timestep.py  window_functions.py
src/dynasaur/basis_functions/: basis_list.py  chebyshev_basis_functions.py  timeseries_basis_functions.py
src/dynasaur/config/: __init__.py  default.ini  load_config.py
src/dynasaur/data_generation/: compute_waveform.py  data_generation.py  data_processing.py  orbits_functions.py
src/dynasaur/tests/: test_data_process.py  waveform_test.py
src/massdynamics/: create_model.py  kepler_orbits.py  test_chirp.py  test_model.py  test_model_timestep.py  test_orbits.py  test_plot.ipynb  test_waveform.py  train_model.py  train_model_timestep.py  window_functions.py
src/massdynamics/basis_functions/: __init__.py  (+4 more)
(+28 files in other folders)
